# Python-Project-Periphery

./: README.md  checklist.md  conf.py  example.toml  import.py  notes  presentation_1.tex  pyproject.toml  quadexm.py  ruff-config.toml
Resources/: CITATION.cff  __init__.py  import.py  index.rst  lint.yml  pyproject.toml  quadexm.py  run_docs.yml  solver.py
worked-examples/2-package/PolysolveLib/: pyproject.toml
worked-examples/3-documentation/PolysolveLib/: pyproject.toml
worked-examples/3-documentation/PolysolveLib/docs/source/: conf.py  usage.rst
worked-examples/3-documentation/PolysolveLib/docs/source/api/: modules.rst
worked-examples/3-documentation/PolysolveLib/polysolve/: solver.py
worked-examples/3-documentation/PolysolveLib/polysolve.egg-info/: PKG-INFO
worked-examples/4-tests/PolysolveLib/: pyproject.toml
worked-examples/4-tests/PolysolveLib/polysolve/: solver.py
worked-examples/4-tests/PolysolveLib/tests/: test_quadratic.py
worked-examples/5-cicd/PolysolveLib/: pyproject.toml
worked-examples/5-cicd/PolysolveLib/docs/source/: conf.py  index.rst
worked-examples/5-cicd/PolysolveLib/docs/source/api/: polysolve.rst
